--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "playwright": "^1.56.1",
     "prisma": "^6.18.0"
   },
   "devDependencies": {
