add sql migration command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon ./src/server.js",
     "prisma:migrate": "cd ./src/prisma && npx prisma migrate dev --name init",
     "crawl": "node ./src/scripts/crawler.js",
-    "schedule": "node ./src/scripts/scheduleCrawler.js"
+    "schedule": "node ./src/scripts/scheduleCrawler.js",
+    "start": "node ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-cron": "^4.2.1",
-    "playwright": "^1.56.1",
-    "prisma": "^6.18.0"
+    "playwright": "^1.56.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.18.0"
   }
 }
