--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "prisma:migrate": "cd ./src/prisma && npx prisma migrate dev --name init",
+    "prisma:migrate": "npx prisma migrate dev --name init",
     "crawl": "node ./src/scripts/crawler.js",
     "schedule": "node ./src/scripts/scheduleCrawler.js",
     "start": "node ./src/server.js"
